--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
           <p class="brand">Nilton <strong>César</strong></p>
           <ul>
             <li><a href="#catalog">Catálogo</a></li>
-            <li><a href="#about">Sobre</a></li>
-            <li><a href="#feature">Features</a></li>
+            <li><a href="#bolsa">Em promoção</a></li>
             <button>Login na loja</button>
           </ul>
         </nav>
@@ -149,84 +148,53 @@
       </div>
     </section>
 
-    <section class="about" id="about">
-      <div class="content">
-        <div class="title-wrapper-about">
-          <p>Know about us</p>
-          <h3>About</h3>
-        </div>
-        <div class="about-content">
-          <div class="left">
-            <img src="images/about.png" alt="About" />
-          </div>
-          <div class="right">
-            <h3>Join technology and mobility</h3>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Repudiandae ut inventore magni repellendus ab ad itaque facere. A
-              tenetur quam, nobis tempore illum laborum ipsa fuga, itaque
-              possimus repellat ad perspiciatis, velit reiciendis eos facilis
-              sapiente blanditiis quas officia hic beatae quibusdam! Quod
-              eligendi porro possimus voluptatum ad ipsum sapiente soluta,
-              maiores nobis tenetur adipisci officiis nisi illum quae natus
-              nostrum tempora accusantium blanditiis? Rem nesciunt illum
-              dolorum, perferendis quos consequatur suscipit cumque fugiat alias
-              sint repellat qui adipisci error est distinctio doloribus labore
-              sunt modi eos odio quibusdam dicta. Dignissimos voluptate illum
-              possimus quo. Ducimus repellat doloribus quisquam quidem?
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
-
     <section class="features" id="features">
       <div class="content">
         <div class="title-wrapper-features">
-          <p>What you can do</p>
-          <h3>Features</h3>
+          <p>Somente essa semana</p>
+          <h3>EM PROMOÇÃO !!!!</h3>
         </div>
-        <div class="feature-card-block">
+        <div class="feature-card-block" id="bolsa">
           <div class="feature-card-item">
-            <img src="images/feature-planet.png" alt="Feature" />
+            <img src="img/pexels-godisable-jacob-1936848.jpg" alt="Feature" />
             <div class="feature-text-content">
-              <h3>Title</h3>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+              <h3>Bolsa</h3>
+              <p>Sacola de couro marrom</p>
             </div>
           </div>
           <div class="feature-card-item">
-            <img src="images/feature-planet.png" alt="Feature" />
+            <img src="img/pexels-godisable-jacob-1936848.jpg" alt="Feature" />
             <div class="feature-text-content">
-              <h3>Title</h3>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+              <h3>Bolsa</h3>
+              <p>Sacola de couro marrom</p>
             </div>
           </div>
           <div class="feature-card-item">
-            <img src="images/feature-planet.png" alt="Feature" />
+            <img src="img/pexels-godisable-jacob-1936848.jpg" alt="Feature" />
             <div class="feature-text-content">
-              <h3>Title</h3>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+              <h3>Bolsa</h3>
+              <p>Sacola de couro marrom</p>
             </div>
           </div>
           <div class="feature-card-item">
-            <img src="images/feature-planet.png" alt="Feature" />
+            <img src="img/pexels-godisable-jacob-1936848.jpg" alt="Feature" />
             <div class="feature-text-content">
-              <h3>Title</h3>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+              <h3>Bolsa</h3>
+              <p>Sacola de couro marrom</p>
             </div>
           </div>
           <div class="feature-card-item">
-            <img src="images/feature-planet.png" alt="Feature" />
+            <img src="img/pexels-godisable-jacob-1936848.jpg" alt="Feature" />
             <div class="feature-text-content">
-              <h3>Title</h3>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+              <h3>Bolsa</h3>
+              <p>Sacola de couro marrom</p>
             </div>
           </div>
           <div class="feature-card-item">
-            <img src="images/feature-planet.png" alt="Feature" />
+            <img src="img/pexels-godisable-jacob-1936848.jpg" alt="Feature" />
             <div class="feature-text-content">
-              <h3>Title</h3>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.</p>
+              <h3>Bolsa</h3>
+              <p>Sacola de couro marrom</p>
             </div>
           </div>
         </div>
@@ -237,32 +205,29 @@
       <div class="main">
         <div class="content footer-links">
           <div class="footer-company">
-            <h4>Company</h4>
-            <h6>About</h6>
-            <h6>Contact</h6>
+            <h4>Empresa</h3>
+            <h5>Sobre</h5>
           </div>
           <div class="footer-rental">
-            <h4>Rental</h4>
-            <h6>Self-Drive</h6>
-            <h6>Chauffer-Driven</h6>
-            <h6>Help</h6>
+            <h4>Precisa de ajuda ?</h4>
+            <h5>Ajuda</h5>
           </div>
           <div class="footer-social">
-            <h4>Stay connected</h4>
+            <h4>Fique conectado(a)</h4>
             <div class="social-icons">
-              <img src="images/instagram.png" alt="Instagram" />
-              <img src="images/facebook.png" alt="Facebook" />
+              <img src="img/instagram (1).png" alt="Instagram" />
+              <img src="img/facebook (1).png" alt="Facebook" />
             </div>
           </div>
           <div class="footer-contact">
-            <h4>Contact US</h4>
-            <h6>+55 31 988776655</h6>
-            <h6>contato@devsuperior.com.br</h6>
-            <h6>Nome da Rua, belo horizonte MG</h6>
+            <h4>Entre em contato com a gente!</h4>
+            <h5>+55 11 988579426</h5>
+            <h5>cesar.n.2@hotmail.com</h5>
+            <h5>Soldado Jõao Rodrigues, 188</h5>
+            <h5>Parque Novo Mundo, São Paulo SP</h5>
           </div>
         </div>
       </div>
-      <div class="last">DevSuperior 2021 - Use like you want</div>
     </footer>
   </body>
 </html>
